--- a/LocadoraCarrosDesktop/App.config
+++ b/LocadoraCarrosDesktop/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="LocadoraCarrosDesktop.Properties.Settings.locadoraConnectionString"
+            connectionString="server=localhost;User Id=root;password=tete;Persist Security Info=True;database=locadora; Allow Zero Datetime=True"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
