--- a/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
+++ b/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
@@ -76,6 +76,12 @@
     <Compile Include="CadastrarCondutor.Designer.cs">
       <DependentUpon>CadastrarCondutor.cs</DependentUpon>
     </Compile>
+    <Compile Include="CadastrarLocatario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastrarLocatario.Designer.cs">
+      <DependentUpon>CadastrarLocatario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CadastrarCondutor.resx">
       <DependentUpon>CadastrarCondutor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastrarLocatario.resx">
+      <DependentUpon>CadastrarLocatario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
