--- a/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
+++ b/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="adodb, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data.Entity, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -82,6 +85,24 @@
     <Compile Include="CadastrarLocatario.Designer.cs">
       <DependentUpon>CadastrarLocatario.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListarMarcas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarMarcas.Designer.cs">
+      <DependentUpon>ListarMarcas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListarCondutores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarCondutores.Designer.cs">
+      <DependentUpon>ListarCondutores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListarLocatarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarLocatarios.Designer.cs">
+      <DependentUpon>ListarLocatarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +121,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="setDefinitivo.cs">
+      <DependentUpon>setDefinitivo.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="setDefinitivo.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>setDefinitivo.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +144,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CadastrarLocatario.resx">
       <DependentUpon>CadastrarLocatario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarMarcas.resx">
+      <DependentUpon>ListarMarcas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarCondutores.resx">
+      <DependentUpon>ListarCondutores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarLocatarios.resx">
+      <DependentUpon>ListarLocatarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -147,6 +186,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="setDefinitivo.xsc">
+      <DependentUpon>setDefinitivo.xsd</DependentUpon>
+    </None>
+    <None Include="setDefinitivo.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>setDefinitivo.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="setDefinitivo.xss">
+      <DependentUpon>setDefinitivo.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
