--- a/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
+++ b/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
@@ -85,6 +85,12 @@
     <Compile Include="CadastrarLocatario.Designer.cs">
       <DependentUpon>CadastrarLocatario.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListarVeiculos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarVeiculos.Designer.cs">
+      <DependentUpon>ListarVeiculos.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListarMarcas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CadastrarLocatario.resx">
       <DependentUpon>CadastrarLocatario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarVeiculos.resx">
+      <DependentUpon>ListarVeiculos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ListarMarcas.resx">
       <DependentUpon>ListarMarcas.cs</DependentUpon>
