--- a/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
+++ b/LocadoraCarrosDesktop/LocadoraCarrosDesktop.csproj
@@ -48,10 +48,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>6CE770255F7E0702FE206EEFE3BCC45790F4C0FB</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>482EA31D50579D091DC1E182B2521C0E3353F2B1</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>LocadoraCarrosDesktop_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>LocadoraCarrosDesktop_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -230,6 +230,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="LocadoraCarrosDesktop_1_TemporaryKey.pfx" />
     <None Include="LocadoraCarrosDesktop_TemporaryKey.pfx" />
     <None Include="locadoraDataSet.xsc">
       <DependentUpon>locadoraDataSet.xsd</DependentUpon>
